@@ -1,6 +1,7 @@
 2017-11-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added note about "requiring" fields, resolves #36
+	* Renamed column configuration properties containing underscores, resolves #38
 
 2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
